# codingame-haskell-solutions

./: .gitignore  .travis.yml  LICENSE  README.md  codingame.cabal  hlint.hs
puzzles/0-easy/ascii-art/: solution.hs
puzzles/0-easy/chuck-norris/: solution.hs
puzzles/0-easy/defibrillators/: solution.hs
puzzles/0-easy/horse-racing-duals/: solution.hs
puzzles/0-easy/kirks-quest-the-descent/: solution.hs
puzzles/0-easy/mars-lander/: solution.hs
puzzles/0-easy/mime-type/: solution.hs
puzzles/0-easy/onboarding/: solution.hs
puzzles/0-easy/ragnarok-power-of-thor/: solution.hs
puzzles/0-easy/skynet-the-chasm/: solution.hs
puzzles/0-easy/temperatures/: solution.hs
puzzles/1-medium/apu-init-phase/: solution.hs
