name:                codingame
version:             0.1.0.0
synopsis:            lpenz solutions for www.codingame.com
homepage:            https://github.com/lpenz/codingame
license:             Apache-2.0
license-file:        LICENSE
author:              Leandro Lisboa Penz
maintainer:          lpenz@lpenz.org
category:            Testing
copyright:           Copyright: (c) 2015 Leandro Lisboa Penz
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable onboarding
  main-is:           puzzles/0-easy/onboarding/solution.hs
  build-depends:     base >= 4.6
  default-language:  Haskell2010

executable kirks-quest-the-descent
  main-is:           puzzles/0-easy/kirks-quest-the-descent/solution.hs
  build-depends:     base >= 4.6
  default-language:  Haskell2010

executable ragnarok-power-of-thor
  main-is:           puzzles/0-easy/ragnarok-power-of-thor/solution.hs
  build-depends:     base >= 4.6
  default-language:  Haskell2010

test-suite hlint
  build-depends:     base >= 4.6
  build-depends:     hlint >= 1.8
  default-language:  Haskell2010
  main-is:           hlint.hs
  type:              exitcode-stdio-1.0

